[gd_scene load_steps=10 format=2]

[ext_resource path="res://vaccum.gd" type="Script" id=1]
[ext_resource path="res://pngegg.png" type="Texture" id=2]
[ext_resource path="res://Blocks/stoneBlock.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Node2D.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 578.001

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "icon.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "stoneBlock.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="world" type="Node2D"]

[node name="vaccum" type="KinematicBody2D" parent="."]
position = Vector2( 528, 354 )
scale = Vector2( 0.05, 0.05 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="vaccum"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="vaccum"]
texture = ExtResource( 2 )

[node name="sc" type="Area2D" parent="vaccum"]
position = Vector2( 0, -560 )
scale = Vector2( 20, 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vaccum/sc"]
position = Vector2( -0.0465279, -0.583345 )
scale = Vector2( 0.997685, 0.979167 )
polygon = PoolVector2Array( 0, 11, 15, -19, -12, -19 )

[node name="sr" type="Area2D" parent="vaccum"]
position = Vector2( 380, -380 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vaccum/sr"]
position = Vector2( -225.972, 102.91 )
rotation = 0.274017
scale = Vector2( 1.02032, 0.946275 )
polygon = PoolVector2Array( 40, -40, 160, -660, 586.903, -414.552 )

[node name="sl" type="Area2D" parent="vaccum"]
position = Vector2( -340, -360 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vaccum/sl"]
position = Vector2( 102, 56.3123 )
scale = Vector2( 0.794119, 0.734375 )
polygon = PoolVector2Array( -3.05176e-05, 20, -680, -260, -320, -620, -3.05176e-05, -20 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65567, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131103, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196639, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262175, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327711, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393247, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458783, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524296, 1, 0, 524297, 1, 0, 524319, 1, 0, 589824, 1, 0, 589832, 1, 0, 589833, 1, 0, 589855, 1, 0, 655360, 1, 0, 655391, 1, 0, 720896, 1, 0, 720927, 1, 0, 786432, 1, 0, 786463, 1, 0, 851968, 1, 0, 851999, 1, 0, 917504, 1, 0, 917535, 1, 0, 983040, 1, 0, 983071, 1, 0, 1048576, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1114112, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 5 )

[connection signal="body_entered" from="vaccum/sc" to="vaccum" method="_on_sc_body_entered"]
[connection signal="body_exited" from="vaccum/sc" to="vaccum" method="_on_sc_body_exited"]
[connection signal="body_entered" from="vaccum/sr" to="vaccum" method="_on_sr_body_entered"]
[connection signal="body_exited" from="vaccum/sr" to="vaccum" method="_on_sr_body_exited"]
[connection signal="body_entered" from="vaccum/sl" to="vaccum" method="_on_sl_body_entered"]
[connection signal="body_exited" from="vaccum/sl" to="vaccum" method="_on_sl_body_exited"]
